# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  urls.py
.github/workflows/: build.yml  heroku.deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializers.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py  test_order_viewsets.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
