[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["ademirsoares <ademir@licitaronline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.1,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
sympy = ">=1.14.0,<2.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
gitpython = ">=3.1.44,<4.0.0"
whitenoise = ">=6.9.0,<7.0.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.2.0"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"